# BayesOptSoftRobotControl

./: .gitignore  LICENSE  README.md  pyproject.toml  simulate_env.py
src/bellows_arm_control/envs/: __init__.py  bellows_arm.py  environment.py  external_sensors.py  grippers.py  objects.py
src/bellows_arm_control/mujoco/: README.md  bellows_arm.mjcf  bellows_arm_hand.mjcf  build_arm.py  build_arm_with_gripper.py  link0.stl  link1.stl  mjcf_env.py  simulate.py
src/bellows_arm_control/mujoco/robotiq_2f85/: 2f85_body.xml
tests/: test_real_time.py  test_rl.py
